Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         </ul>
 
             <p>Abaixo temos algumas tag's que podem ser usadas.</p>
+
+<!--olhar indentacao ul-->
+
             <ul>
             <li>Para colocar uma linha usa &lt;hr&gt;</li>
             <li>Para quebrar a linha &lt;br&gt;</li>
@@ -74,6 +77,8 @@
             <li>Para Trademark <span class="azul">(& trade)</span> &trade;</li>
             <li>Para Delta usa <span class="azul">(& Delta</span> iniciando em maiúsculo<span class="azul">)</span> &Delta;</li>
             <li>Para acesso à mais símbolos acesse o <a href="https://www.w3schools.com/charsets/ref_utf_symbols.asp" target="_blank" rel="external">Misc symbols</a> </li>
+
+<!--olhar indentacao ul-->
 
         </ul>
 
@@ -170,10 +175,10 @@
         <p>Os tipos aceitos são 1 A a I i</p>
             <ul>
                 <li>1 para números</li>
-                <li>A (maiusculo) para letras maiúsculas.</li>
+                <li>A (maiúsculo) para letras maiúsculas.</li>
                 <li>a (minúsculo) para letras minúsculas.</li>
-                <li>I (maiúsculo) para núemeros romanos maiúsculos.</li>
-                <li>i (minusculo) para números romanos maiúsculos.</li>
+                <li>I (maiúsculo) para números romanos maiúsculos.</li>
+                <li>i (minúsculo) para números romanos maiúsculos.</li>
             </ul>
 
     <h3>Listas Não Ordenadas</h3>      
