--- a/index.html
+++ b/index.html
@@ -564,7 +564,8 @@ type</span>=<span class="ama">"aplication/pdf"</span>&gt;Currículo Rafael<span 
         <section class="code-html">
             <code>
                 <pre>
-<span class="ame">*{</span><span class="azul">margin</span> <span class="ama">0;</span>
+<span class="ame">*{</span>
+<span class="azul">margin</span> <span class="ama">0;</span>
 <span class="azul">padding</span> <span class="ama">0;</span>
 <span class="azul">box-sizing</span> <span class="ama">border-box;</span>
 <span class="ame">}</span>
@@ -591,7 +592,7 @@ type</span>=<span class="ama">"aplication/pdf"</span>&gt;Currículo Rafael<span 
     <section class="code-html">
         <code>
             <pre>
-                <span class="azul">background-image:</span> <span class="lim">linear-gradient</span>(<span class="ama"></span> sentido, <span class="ama">cor1, cor2, cor3</span>);
+<span class="azul">background-image:</span> <span class="lim">linear-gradient</span>(<span class="ama"></span> sentido, <span class="ama">cor1, cor2, cor3</span>);
             </pre>
         </code>
     </section>
@@ -602,7 +603,8 @@ type</span>=<span class="ama">"aplication/pdf"</span>&gt;Currículo Rafael<span 
     <section class="code-html">
         <code>
             <pre>
-<span class="azul">background-image:</span> <span class="lim">linear-gradient</span> (<span class="ama">to top</span> (sentido), <span class="ama">cor1 10%, cor2 20%, cor3 70%</span>);
+<span class="azul">background-image:</span> <span class="lim">linear-gradient</span> (<span class="ama">to top</span> (sentido), 
+<span class="ama">cor1 10%, cor2 20%, cor3 70%</span>);
             </pre>
         </code>
     </section>
